# Terminus

./: .env.example  .moosenet-pipeline.yaml  Cargo.toml  LICENSE  README.md  mirror-placeholders.example.toml  rust-toolchain.toml
constellation-web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
constellation-web/src/: App.tsx  main.tsx
data/: prefix_registry.toml
data/intake-corpus/: reranking.json
deploy/: review-daemon.service  terminus-mirror-history-sync.service  terminus-mirror-history-sync.sh  terminus-mirror-history-sync.timer  terminus-mirror-runner.service  terminus-mirror-runner.sh  terminus-mirror-runner.timer
deploy/redis/: install.sh  redis.conf  redis.service
docs/: README.md  architecture.md  build.md  cortex-calibration.md  cortex-elegance-gate.md  getting-started.md  house-style.md  index.md
docs/architecture/: auth.md  broker.md  chord-integration.md  federation.md  mesh.md
docs/atlas/: deferred-enhancements.md
docs/constellation/: CONST-01-adaptation.md  CONST-02-aggregation-api.md  CONST-GUI-SPEC.md  LUMINA-GUI-SPEC.md
docs/deploy/: client.md  personal-services.md
docs/guides/: index.md  run-a-model-intake-sweep.md  run-a-review-panel.md  run-the-git-public-mirror.md
docs/networking/: README.md  tailscale.md  wireguard.md
docs/reference/: architecture.md  at-a-glance.md  atlas-knowledge-graph-query-tools.md  broker.md  compiler-build-the-single-build-door-bld-05.md  compiler-deploy-trigger-on-publish-fleet-wide-bld-13.md  compiler-progress-live-build-progress-events-bld-19.md  compiler-request-queue-scheduler-bld-06.md  compiler-status-fleet-version-query-bld-08.md  constellation-aggregation-api-const-02.md  cortex-code-elegance-risk-gate-atlas-backed-s115-cxeg.md  cortex.md  documentation.md  fleet-clock-time-now-clk-01.md  forge.md  gitea.md  github.md  index.md  intake.md  license.md  media.md  mesh-federating-multiple-upstream-terminus-servers.md  mesh.md  mint-idle-mode-release-the-host-for-a-ci-cd-compiler-run-bld-10.md  pg.md  plane.md  postgres-tool-suite-the-single-sanctioned-postgres-door-s115.md  quickstart.md  redis-backend-the-shared-fleet-cache-queue-limiter-bld-20.md  review.md  scribe.md  tools.md  unified-principal-identity-mesh-06.md  what-terminus-is.md
docs/specs/: S120-gitea-merge-queue.md  S122-pcon07-speculative-batching.md
docs/tools/: README.md  postgres-suite.md
examples/: review_run_e2e.rs
intake-corpus-v2/: README-java-go.md  manifest-additions.json
migrations/: S112-mint01-code-profile-factors.sql  S112-mint02-failure-class.sql  S112-mint03-run-aggregates.sql  S112-mint05-epoch-marker.sql  S112-mint07-fleet-catalog.sql  S114-disc01-brochure.sql  S125-cb02-discovery-modality.sql
specs/: S104-github-mirror-engine.md  S106-git-tool-domains.md  S112-review-kg-integration.md  S113-kg-findings-capture.md  S113-kg-rule-promotion.md  S113-kg-semantic-embeddings.md  S115-terminus-modular-broker.md  S117-constellation-cicd-compiler.md  S119-dgrich-rich-doc-generator.md  S119-docgen-landing-hierarchy.md  S94-media-domain.md  S95-documentation-engine.md
specs/behavior/: cortex-behavior.md  media-behavior.md  terminus-mesh-behavior.md
src/: approval.rs  config.rs  error.rs  hermeticity.rs  lib.rs  mcp_server.rs  registry.rs  secrets_bootstrap.rs  tool.rs
src/ansible/: mod.rs
src/broker/: control.rs  mod.rs  rollout.rs  routes.rs
src/commute/: mod.rs
src/compat/: mod.rs
src/compiler/: deploy.rs  events.rs  host.rs  idle_lease.rs  mod.rs  publish.rs  queue.rs  resource.rs  sccache.rs  scheduler.rs  scope.rs  status.rs
src/constellation/: activity.rs  assets.rs  audit.rs  auth.rs  mask.rs  mod.rs  models_api.rs  proxy.rs  ws.rs
src/cortex/: audit.rs  calibrate.rs  crystallize.rs  debt.rs  deprecated.rs  house_style.rs  metrics.rs  mod.rs  review.rs  scope.rs  waiver.rs
src/council/: mod.rs
src/crucible/: mod.rs
src/dev/: mod.rs
src/dgem/: mod.rs  vram.rs
src/dura/: mod.rs
src/federation/: mod.rs
src/forge/: capability.rs  git_private.rs  git_public.rs  git_transport.rs  gitea_family.rs  gitlab.rs  mod.rs  posture.rs  provider.rs  registry.rs  stubs.rs
src/gateway/: mod.rs
src/gateway_framework/: audit.rs  mod.rs  rate_limit.rs
src/gitea/: merge_queue.rs  mod.rs  types.rs
src/github/: adapter.rs  mod.rs  pii.rs
src/google/: caldav.rs  imap.rs  mod.rs  smtp.rs
src/hearth/: mod.rs
src/house_style/: mod.rs
src/inference_proxy/: mod.rs
src/infisical/: mod.rs
src/intake/: agent.rs  aggregate.rs  breakfix.rs  catalog.rs  checkpoint.rs  chord_pull.rs  chord_session.rs  code.rs  code_v2.rs  coder_case.rs  coder_gaps.rs  coder_sweep.rs  context.rs  gpu_authority.rs  infer.rs  jobs.rs  lifecycle.rs  mod.rs  runner.rs  storage.rs  supervisor.rs  timeouts.rs  vuln_scan.rs
src/jellyseerr/: mod.rs
src/ledger/: mod.rs
src/litellm/: mod.rs
src/lumina_ext/: mod.rs
src/media/: mod.rs  organize.rs  recommend.rs  request.rs  search.rs  surface.rs  taste_memory.rs
src/meridian/: market.rs  mod.rs  state.rs  tools.rs
src/mesh/: client.rs  client_onboarding.rs  identity.rs  merge.rs  mod.rs  onboarding.rs  principal.rs  registry.rs  tailnet.rs
src/metrics/: mod.rs
src/mint/: idle.rs  mod.rs
src/model_advisor/: mod.rs
src/network/: mod.rs
src/news/: mod.rs
src/odyssey/: mod.rs
src/openhands/: mod.rs
src/pg/: admin.rs  conn.rs  ddl.rs  execute.rs  identities.rs  mod.rs  query.rs
src/pki/: ca.rs  enroll.rs  mod.rs  mtls.rs  server.rs
src/plane/: mod.rs  prefix.rs  types.rs
src/portainer/: mod.rs
src/prometheus/: mod.rs
src/ratelimit/: mod.rs
src/redis/: mod.rs
src/relay/: mod.rs
src/reminder/: mod.rs  parse.rs
src/review/: aggregate.rs  capacity.rs  dispatch.rs  (+7 more)
terminus-client/: Cargo.toml  README.md
terminus-client/scripts/: validate-daemon.sh
terminus-client/src/: enroll.rs  error.rs  forward.rs  lib.rs  mcp_server.rs  transport.rs
terminus-worker-sdk/: Cargo.toml  README.md
terminus-worker-sdk/src/: lib.rs  manifest.rs  server.rs
tests/: house_style.rs  intake.rs  mesh_e2e.rs  tool_tests.rs
(+399 files in other folders)
