[package]
name = "terminus-rs"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Rust fallback tool implementations for the Chord proxy"
repository = "https://github.com/moosenet-io/terminus"
readme = "README.md"

[lib]
name = "terminus_rs"
path = "src/lib.rs"

[dependencies]
# terminus-rs is a STANDALONE crate with no lumina-core dependency. The small
# set of types it once borrowed from lumina-core are vendored byte-for-byte into
# `src/compat/`, keeping the chord -> terminus chain free of lumina-core.
# `dirs` + `log` are the only transitive deps those vendored copies add.
dirs = "5.0"
log = "0.4"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# model_advisor bundled presets/matrix + council custom-preset overlay (constellation.yaml)
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], default-features = false }
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1.0"
tracing = "0.1"
# Installed by intake::init_tracing() -- without a subscriber, tracing::{info,
# warn,error}! calls are silently dropped (no panic, no error, just nowhere to
# go), which is exactly what made the acquire-backoff fix's progress logging
# invisible in production. env-filter lets RUST_LOG tune verbosity per unit.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
# MINT Phase 1: the unified `mint` CLI binary (src/bin/mint.rs) uses clap's
# derive API for its subcommand tree.
clap = { version = "4", features = ["derive"] }
# Google tools: IMAP (read), SMTP (send), CalDAV uses reqwest (already present)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "tls12", "ring", "std"] }
rustls-native-certs = "0.8"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "ring"] }
# <host> personal MCP server (src/bin/terminus_personal.rs): a standalone
# streamable-HTTP MCP server exposing the personal-utility tool subset.
# Same axum/tower versions Chord (moosenet/Chord) pins, for convention parity.
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
# S100 (TERM): distributed Redis-backed Plane GET cache + rate limiter.
# connection-manager gives a multiplexed, auto-reconnecting async connection;
# `script` powers the atomic distributed rate-limiter Lua reservation.
# TLS door: internal LAN needs none, so the second rustls stack that
# `tokio-rustls-comp` pulls is deliberately NOT compiled in. To open the door
# for a `rediss://` URL later, add "tokio-rustls-comp" to the feature list — no
# code change is required (the URL scheme drives TLS in the redis client).
redis = { version = "0.24", default-features = false, features = ["tokio-comp", "connection-manager", "script", "keep-alive"] }
# Stable SHA-1 digest for the shared Redis cache keys: a fixed algorithm whose
# output is identical across Rust versions / builds, so processes on different
# builds sharing one Redis never fragment the cache (unlike std DefaultHasher).
# Already in the tree (redis uses it for EVALSHA), so no new build cost.
sha1_smol = "1"

[dev-dependencies]
# mcp_server tests drive the axum Router directly via `ServiceExt::oneshot`.
tower = { version = "0.4", features = ["util"] }
httpmock = "0.7"
tokio-test = "0.4"
serial_test = "3"
tempfile = "3"

# S84 ASMT-02: explicit integration-test target for the dim-1 conversation suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim1_conversation"
path = "tests/intake/dim1_conversation.rs"

# S84 ASMT-03: explicit integration-test target for the dim-2 tool-chaining suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim2_toolchain"
path = "tests/intake/dim2_toolchain.rs"
# S84 ASMT-04: explicit integration-test target for the dim-3 memory-integration suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim3_memory"
path = "tests/intake/dim3_memory.rs"
# S84 ASMT-05: explicit integration-test target for the dim-4 OCEAN suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim4_ocean"
path = "tests/intake/dim4_ocean.rs"

# S84 ASMT-07: explicit integration-test target for the dim-6 embeddings suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim6_embeddings"
path = "tests/intake/dim6_embeddings.rs"

# S84 ASMT-09: explicit integration-test target for the consolidated runner
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_asmt09_runner"
path = "tests/intake/asmt09_runner.rs"

# S84 ASMT-11: explicit integration-test target for the reporting / money-query
# layer (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_reporting"
path = "tests/intake/reporting.rs"

# S85 SRV-02: explicit integration-test target for the serving-profile runner
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_serving_runner"
path = "tests/intake/serving_runner.rs"

# S85 SRV-07: explicit integration-test target for the serving control/status
# tools (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "tools_serving_tools"
path = "tests/tools/serving_tools.rs"

# S85 SRV-03: explicit integration-test target for the build-conditional recheck.
[[test]]
name = "intake_serving_recheck"
path = "tests/intake/serving_recheck.rs"
