# TCLI-04: this manifest is now a (non-virtual) Cargo workspace: the root
# package below (`terminus-rs`) remains the workspace root/default member
# (unchanged in every other respect), and `terminus-client` -- a NEW,
# independent crate (per the S107 spec's design decision #1: in-repo, not a
# separate repo, but deliberately loosely coupled so it can be extracted
# later without churn) -- joins as a second member. `terminus-client` does
# NOT depend on `terminus-rs`; it only talks to a terminus primary over
# HTTP/mTLS on the wire, matching field shapes by convention (see that
# crate's doc comments), not by sharing Rust types.
[workspace]
members = ["terminus-client"]

[package]
name = "terminus-rs"
version = "1.3.1"
edition = "2021"
license = "MIT"
description = "Rust fallback tool implementations for the Chord proxy"
repository = "https://github.com/moosenet-io/terminus"
readme = "README.md"

[lib]
name = "terminus_rs"
path = "src/lib.rs"

# TGW-01: `terminus-primary`, the aggregated-core-registry gateway
# binary, joins `terminus_personal` (already auto-discovered via
# `src/bin/*.rs`) as an explicit `[[bin]]` entry for clarity. Cargo's
# `src/bin/` autodiscovery already covers this path implicitly; this entry
# is documentation-equivalent, not a behavior change.
[[bin]]
name = "terminus_primary"
path = "src/bin/terminus_primary.rs"

[dependencies]
# terminus-rs is a STANDALONE crate with no lumina-core dependency. The small
# set of types it once borrowed from lumina-core are vendored byte-for-byte into
# `src/compat/`, keeping the chord -> terminus chain free of lumina-core.
# `dirs` + `log` are the only transitive deps those vendored copies add.
dirs = "5.0"
log = "0.4"
# Direct process-group kill (killpg) for the GHMR-05 cleaner sandbox measure — no
# reliance on an external `pkill` binary. Already present transitively; pinned as a
# direct dep here so `src/forge/mirror/clean.rs` can call it. unix-gated at use.
libc = "0.2"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# KGRAPH-02: Atlas deterministic node/edge extraction. Rust grammar only in
# this item; Python/TS grammars follow in a later widening item. Versions match
# Harmony's existing repo_map pins (tree-sitter 0.25 / tree-sitter-rust 0.24).
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
# KGRAPH-05: Atlas community detection. petgraph holds the undirected graph the
# (inline, deterministic) Louvain pass runs over. A Leiden crate is not vendored
# in the local registry, so Louvain is the sanctioned fallback (spec KGRAPH-05).
petgraph = "0.6"
# model_advisor bundled presets/matrix + council custom-preset overlay (constellation.yaml)
serde_yaml = "0.9"
# S101 (TERM): parse the git-versioned prefix-registry baseline
# (data/prefix_registry.toml), compiled into the binary via include_str!.
# Parse-only at runtime (overlay claims are JSON in Redis via serde_json).
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"], default-features = false }
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
# TGW-03: inference-proxy streaming (relaying Chord's /v1/chat/completions and
# related responses as an unbuffered byte stream, same as moosenet/Chord's own
# chat_completions handler) needs `TryStreamExt` directly rather than only
# transitively via reqwest/hyper.
futures-util = "0.3"
percent-encoding = "2.3"
thiserror = "1.0"
tracing = "0.1"
# Installed by intake::init_tracing() -- without a subscriber, tracing::{info,
# warn,error}! calls are silently dropped (no panic, no error, just nowhere to
# go), which is exactly what made the acquire-backoff fix's progress logging
# invisible in production. env-filter lets RUST_LOG tune verbosity per unit.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
# MINT Phase 1: the unified `mint` CLI binary (src/bin/mint.rs) uses clap's
# derive API for its subcommand tree.
clap = { version = "4", features = ["derive"] }
# Google tools: IMAP (read), SMTP (send), CalDAV uses reqwest (already present)
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "tls12", "ring", "std"] }
rustls-native-certs = "0.8"
# TCLI-01: embedded native-Rust CA (src/pki/) — self-signed root CA generation
# + signing of downstream leaf certs (TCLI-02/03). `x509-parser` is required
# for `Issuer::from_ca_cert_pem`, used to load a previously-persisted CA back
# into a signer on restart. Default features (crypto+pem+ring) cover
# generation/PEM (de)serialization.
rcgen = { version = "0.14", features = ["x509-parser"] }
# TCLI-02: enrollment-issued application-layer JWT (paired with the TCLI-01
# CA-signed transport-layer client cert). No JWT crate existed anywhere in
# this repo prior to this item (the "Chord JWT workaround" the TCLI-02 spec
# item references lives in the separate moosenet/Chord repo, out of reach
# here) -- this is the ONE JWT library terminus-rs now uses; later Gateway-P2
# items (TCLI-03/04/05) reuse it rather than adding a second one.
jsonwebtoken = "9"
# TCLI-02: `rcgen::CertificateParams::not_before`/`not_after` take
# `time::OffsetDateTime`, not `chrono` -- needed for hour-granularity leaf
# cert TTLs (TCLI-01's CA only needed day granularity, via
# `rcgen::date_time_ymd`, so it never needed this directly). Already in the
# tree transitively via rcgen; pinned directly here for the same reason
# `rcgen` was pinned to `x509-parser`'s feature above.
time = { version = "0.3", default-features = false }
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "smtp-transport", "builder", "ring"] }
# The standalone personal MCP server (src/bin/terminus_personal.rs): a
# streamable-HTTP MCP server exposing the personal-utility tool subset.
# Same axum/tower versions Chord (moosenet/Chord) pins, for convention parity.
axum = { version = "0.7", features = ["json", "macros"] }
# TCLI-03: "util" adds `tower::ServiceExt::oneshot`, used by
# `src/pki/mtls.rs`'s per-connection hyper service to dispatch each request
# into the shared `axum::Router` (see that module's "why hyper directly"
# doc). Previously only enabled in [dev-dependencies] (test-only oneshot
# usage in mcp_server.rs/enroll.rs); promoted here since this item's runtime
# code now needs it too.
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
# S100 (TERM): distributed Redis-backed Plane GET cache + rate limiter.
# connection-manager gives a multiplexed, auto-reconnecting async connection;
# `script` powers the atomic distributed rate-limiter Lua reservation.
# TLS door: internal LAN needs none, so the second rustls stack that
# `tokio-rustls-comp` pulls is deliberately NOT compiled in. To open the door
# for a `rediss://` URL later, add "tokio-rustls-comp" to the feature list — no
# code change is required (the URL scheme drives TLS in the redis client).
redis = { version = "0.24", default-features = false, features = ["tokio-comp", "connection-manager", "script", "keep-alive"] }
# Stable SHA-1 digest for the shared Redis cache keys: a fixed algorithm whose
# output is identical across Rust versions / builds, so processes on different
# builds sharing one Redis never fragment the cache (unlike std DefaultHasher).
# Already in the tree (redis uses it for EVALSHA), so no new build cost.
sha1_smol = "1"
# TCLI-03: mTLS listener (`src/pki/mtls.rs`) needs to parse the peer leaf
# cert's Extended Key Usage + validity window at runtime (post-handshake,
# fail-closed EKU/expiry check independent of rustls's own chain
# validation) -- promoted from dev-only (where TCLI-02's tests used it) to a
# regular dependency. Already a transitive dep of `rcgen`'s "x509-parser"
# feature; "verify" is kept for the existing enroll.rs chain-of-trust tests.
x509-parser = { version = "0.18", features = ["verify"] }
# TCLI-03: parse the PEM-encoded CA/server cert + key material into the DER
# form `rustls::ServerConfig`/`RootCertStore` need. The same de-facto
# standard PEM parser the rustls ecosystem uses everywhere (already a
# transitive dependency via tokio-rustls/reqwest's rustls-tls stack);
# pinned directly here for the same reason `rcgen`/`time` are pinned above.
rustls-pemfile = "2"
# TCLI-03: the mTLS listener terminates TLS itself (via `tokio_rustls`) and
# then has to speak HTTP over the resulting stream to reach the *same*
# `axum::Router` the plain `/mcp` listener serves -- `axum::serve` doesn't
# expose a hook to attach per-connection data (the verified client
# identity) to each request's extensions, so this item drives one `hyper`
# connection per accepted socket directly instead, inserting the identity
# extracted from the handshake before dispatching into the shared router.
# Version pinned to line up with the `hyper` 1.x axum 0.7 already pulls in
# transitively, so this does not introduce a second hyper major version.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }

[dev-dependencies]
# mcp_server tests drive the axum Router directly via `ServiceExt::oneshot`.
tower = { version = "0.4", features = ["util"] }
httpmock = "0.7"
tokio-test = "0.4"
serial_test = "3"
tempfile = "3"

# S84 ASMT-02: explicit integration-test target for the dim-1 conversation suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim1_conversation"
path = "tests/intake/dim1_conversation.rs"

# S84 ASMT-03: explicit integration-test target for the dim-2 tool-chaining suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim2_toolchain"
path = "tests/intake/dim2_toolchain.rs"
# S84 ASMT-04: explicit integration-test target for the dim-3 memory-integration suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim3_memory"
path = "tests/intake/dim3_memory.rs"
# S84 ASMT-05: explicit integration-test target for the dim-4 OCEAN suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim4_ocean"
path = "tests/intake/dim4_ocean.rs"

# S84 ASMT-07: explicit integration-test target for the dim-6 embeddings suite
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_dim6_embeddings"
path = "tests/intake/dim6_embeddings.rs"

# S84 ASMT-09: explicit integration-test target for the consolidated runner
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_asmt09_runner"
path = "tests/intake/asmt09_runner.rs"

# S84 ASMT-11: explicit integration-test target for the reporting / money-query
# layer (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_reporting"
path = "tests/intake/reporting.rs"

# S85 SRV-02: explicit integration-test target for the serving-profile runner
# (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "intake_serving_runner"
path = "tests/intake/serving_runner.rs"

# S85 SRV-07: explicit integration-test target for the serving control/status
# tools (Cargo does not auto-discover test files inside subdirectories).
[[test]]
name = "tools_serving_tools"
path = "tests/tools/serving_tools.rs"

# S85 SRV-03: explicit integration-test target for the build-conditional recheck.
[[test]]
name = "intake_serving_recheck"
path = "tests/intake/serving_recheck.rs"
