[package]
name = "terminus-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Enrollment + mTLS transport client for a terminus primary (Gateway P2, TCLI-04)"
readme = "README.md"

[lib]
name = "terminus_client"
path = "src/lib.rs"

[dependencies]
# HTTP client for the one-shot /enroll call. rustls-tls (not native-tls) to
# match the rest of this workspace's TLS stack and avoid pulling openssl.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# mTLS dial to the terminus primary's :8301-style listener (TCLI-03).
rustls = { version = "0.23", default-features = false, features = ["logging", "tls12", "ring", "std"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["net", "rt", "macros", "time", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
# Test-only: build a mock enrollment HTTP endpoint and a mock mTLS server
# (both a CA-chained one and a foreign-CA one) to exercise enroll()/connect()
# without needing a live terminus primary. `x509-parser` isn't needed here --
# `rcgen` alone is sufficient to mint the CA + leaf material the mock servers
# present.
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
rcgen = { version = "0.14" }
time = { version = "0.3", default-features = false }
tempfile = "3"
serial_test = "3"
