[package]
name = "terminus-worker-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Thin authoring surface for a Terminus tool worker: register RustTool impls and serve the initialize/tools-list/tools-call subset over a Unix domain socket."
readme = "README.md"

[lib]
name = "terminus_worker_sdk"
path = "src/lib.rs"

# TMOD-03: a worker is "impl RustTool + a main.rs" -- this crate depends on
# `terminus-rs` (path dep, the workspace root package) purely to RE-EXPORT
# its existing `RustTool`/`ToolOutput`/`ToolError`/`ToolInfo` types (see
# `src/lib.rs`). It deliberately does NOT relocate those types out of
# terminus-rs (a sibling item, registry.rs, is being edited concurrently) and
# does NOT depend on `terminus-rs::broker::transport` (another sibling item
# owns the daemon-side `WorkerTransport` client, not yet merged) -- this
# crate's `server` module is its own minimal, self-contained worker-side
# JSON-RPC-over-UDS listener. Reconciling the two (so a daemon's
# `WorkerTransport` and this SDK's server speak the exact same framing over
# the exact same socket type) is left as a documented follow-up once the
# broker transport item lands.
[dependencies]
terminus-rs = { path = ".." }
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
